--- a/src/scss/base/_tipografy.scss
+++ b/src/scss/base/_tipografy.scss
@@ -1,8 +1,8 @@
-@use 'variables' as v;
-@use 'mixins' as m;
+@use 'variables' as var;
+@use 'mixins' as mix;
 
 h1, h2, h3 {
-    
+    @include mix.headings;
 }
 
 h1 {
@@ -16,4 +16,8 @@ h3 {
 }
 .text-center {
     text-align: center;
+}
+
+[class$="__heading"]{
+    @include mix.page-name;
 }
