February 14th 2025 Martin Fuentes Fernandez Changes until February 14th

--- a/src/scss/base/_globals.scss
+++ b/src/scss/base/_globals.scss
@@ -22,3 +22,11 @@ img {
     width: 100%;
     height: auto;
 }
+
+@font-face {
+    font-family: 'Charter';
+    src: url('fonts/charter_regular.woff') format('woff'),
+         url('fonts/charter_regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
