--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -1,5 +1,5 @@
 // Fuentes
-$principal-font: 'Avenir', 'Charter', sans-serif;
+$principal-font: 'Charter', 'Avenir', sans-serif;
 
 // Tamaño de Media Queries
 $telephone: 480px;
@@ -26,6 +26,8 @@ $c_dark-gray: #1E293B;
 
 $c_red: rgb(169, 0, 0);
 $c_green: #02db02;
+
+$c_golden: #e6d36c;
 
 // Fuentes
 $light: 300;
