March 27th 2025 Martin Fuentes Fernandez Changes until March 27th

--- a/src/scss/admin/_dashboard.scss
+++ b/src/scss/admin/_dashboard.scss
@@ -12,6 +12,8 @@
     &__header-grid{
         display: flex;
         flex-direction: column;
+        align-items: center;
+        gap: 0.5rem;
         @include mix.tablet{
             flex-direction: row;
             justify-content: space-between;
