--- a/src/scss/pages/_chapels.scss
+++ b/src/scss/pages/_chapels.scss
@@ -2,6 +2,7 @@
 @use 'base/variables' as var;
 
 .chapel{
+    background: transparent;
     &__name{
         margin: 0 0 1rem 0;
         font-size: 2.5rem;
@@ -59,4 +60,8 @@
         align-items: center;
         text-align: center;
     }
+}
+
+.chapels.slider.swiper {
+    background-color: transparent !important;
 }
