March 31st 2025 Martin Fuentes Fernandez Changes until March 31st

--- a/src/scss/UI/form/_form.scss
+++ b/src/scss/UI/form/_form.scss
@@ -62,8 +62,9 @@
         margin-top: 3rem;
     }
     &__image{
-        max-width: 20rem;
-        margin: 2rem 0;
+        // max-width: 20rem;
+        // margin: 2rem 0;
+        @include mix.grid(3, 1rem);
     }
     &__list{
         @include mix.tags;
