--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -26,7 +26,8 @@ $c_dark-gray: #1E293B;
 
 $c_red: rgb(169, 0, 0);
 $c_green: #02db02;
-
+$c_olive: #4b5c09;
+$c_yellow: #FFFF00;
 $c_golden: #e6d36c;
 
 // Fuentes
